feat: otimizar CSS e adicionar acessibilidade
- Reduzir CSS de 500 para 200 linhas
- Adicionar aria-labels e navegação semântica
- Implementar flexbox moderno
- Usar clamp() para tipografia responsiva
- Reduzir de 15+ para 5 breakpoints
- Adicionar lazy loading e meta description
- Melhorar transições e hover states

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IF=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description"
+        content="Easy Shopping Via Mobile - Faça suas compras online de forma simples e rápida pelo celular">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Easy Shopping Via Mobile</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,29 +19,28 @@
     <div class="wrapper">
 
         <section class="container-left">
-
             <h1>Easy Shopping Via Mobile</h1>
-            <p>Se você está procurando uma maneira simples e rápida de fazer suas compras online, nossa loja é a escolha
+            <p>
+                Se você está procurando uma maneira simples e rápida de fazer suas compras online, nossa loja é a
+                escolha
                 perfeita. Com apenas alguns toques na tela do seu celular, você pode explorar uma ampla variedade de
                 produtos e aproveitar ofertas exclusivas. O design intuitivo e o processo de compra simplificado tornam
                 tudo mais fácil e agradável. Experimente e veja como é prático!
-
             </p>
-            <button>Get Started</button>
-
+            <button type="button" aria-label="Começar agora">Get Started</button>
         </section>
 
         <section class="container-right">
-
             <header>
-                <a>Home</a>
-                <a>Work</a>
-                <a>About</a>
-                <a>Contact</a>
+                <nav aria-label="Navegação principal">
+                    <a href="#home" aria-label="Ir para Home">Home</a>
+                    <a href="#work" aria-label="Ver trabalhos">Work</a>
+                    <a href="#about" aria-label="Sobre nós">About</a>
+                    <a href="#contact" aria-label="Entrar em contato">Contact</a>
+                </nav>
             </header>
 
-            <img src="imagem/logo.png" alt="img-logo">
-
+            <img src="imagem/logo.png" alt="Ilustração de compras via mobile mostrando smartphone" loading="lazy">
         </section>
 
     </div>
